--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,14 @@
     padding: 0;
 }
 
+.hidden {
+    display: none;
+}
+
+html, body {
+    height:100%;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
@@ -22,12 +30,38 @@ Main {
     flex-wrap: wrap;
 }
 
+Header{
+    background-color: #7975b2;
+    position: sticky;
+    top: 0;
+    display: flex;
+}
 
+header nav ul {
+   margin-top: 45px; 
+}
 
 header > h1 {
     text-align: center;
     padding: 8px;
 }
+
+header nav ul li {
+    margin: 0px;
+    display: inline;
+    cursor: pointer;
+}
+
+header li:last-of-type::after {
+    content: "\25bc";
+    padding-left: 4px;
+    }
+    
+    
+    header nav ul li:hover {
+        opacity: 0.8;
+    
+    }
 
 article {
     width: 400px;
@@ -48,17 +82,21 @@ article:first-of-type {
 }
 
 #inprogress {
+   
     border: 4px solid red
+
 
 }
 
 
 #inprogress h2 {
+  
     color: red;
 }
 
 #done {
-border: 4px solid green ;
+   
+    border: 4px solid green ;
 }
 
 
@@ -92,6 +130,7 @@ ul li {
 
 
 
+
 input[type="checkbox"]:checked +span::after {
     content: '\2713';
     width: 25px;
@@ -103,4 +142,36 @@ input[type="checkbox"]:checked +span::after {
     top:10px;
     right:18px;
     font-size:24px;
-    animation: fadein 0.7s;
+    animation:fadein 0.7s;
+
+
+}
+
+    @-keyframes fadein {
+        from: { opacity: 0; }
+        to: { opacity: 1; }
+    }
+
+ 
+    
+
+    article h3 {
+        font-size:  40px;
+        text-align: center;
+        margin-bottom: 14px;
+    
+    }
+
+
+    footer {
+        color: white;
+        padding: 20px 0;
+        text-align: center;
+    
+    }
+    
+    .sticky_footer {
+        position:sticky;
+        top:100%;
+        height:80px;
+    }
