--- a/css/main.css
+++ b/css/main.css
@@ -132,12 +132,12 @@ ul li {
 
 
 input[type="checkbox"]:checked +span::after {
-    content: '\2713';
+    content: '\1F9E1';
     width: 25px;
     height:25px;
     border-radius: 50%;
-    background-color: green;
-    border: 4px solid #20b320;
+    background-color: rgb(117, 0, 12828, 0, 90);
+    border: 4px solid #2065b3;
     position:absolute;
     top:10px;
     right:18px;
@@ -161,7 +161,7 @@ input[type="checkbox"]:checked +span::after {
         margin-bottom: 14px;
     
     }
-
+   
 
     footer {
         color: white;
