--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ header li:last-of-type::after {
 
 article {
     width: 400px;
-    border: 4px solid white;
+    border: 4px solid #2065b3;
     border-radius: 8px;
     margin: 10px 12px;
 
@@ -104,10 +104,7 @@ article:first-of-type {
     color: green;
 }
 
-ul {
-    list-style-type: none;
 
-}
 
 
 ul li {
@@ -164,7 +161,7 @@ input[type="checkbox"]:checked +span::after {
    
 
     footer {
-        color: white;
+        color: #2065b3;
         padding: 20px 0;
         text-align: center;
     
